log/build_2024-04-07_15-28-29/arduinobot_utils/stderr.log
  File "/home/adi/arduinobot_ws/install/arduinobot_utils/lib/python3.10/site-packages/arduinobot_utils/angle_conversion.py", line 14
    def 
        ^
SyntaxError: invalid syntax

